# farm-sharing-app

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
db/migrations/down/: 1.sql
db/migrations/up/: 1.sql
db/test-data/: 1.sql
src/: dbrepo.rs  main.rs
src/api/: connections.rs  details.rs  requests.rs  resources.rs
src/dbrepo/: models.rs
zig-port/: build.zig  build.zig.zon
zig-port/src/: main.zig
