[package]
name = "rust-rest-boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
rocket = "0.4.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
