[package]
name = "cosmas-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
rocket = "0.5.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version="0.6", features = [ "chrono" ] }

[dependencies.rocket_db_pools]
version = "=0.1.0-rc.3"
features = ["sqlx_mysql"]
